add filter on not aproved
