# src/ITLabReports/transport/report/http/handlers/v2/handlers.go
@@ -38,6 +38,8 @@ import (
 // @Param sortBy query string false "sorting query"
 // 
 // @Param onlyApproved query boolean false "filtering on approved"
+// 
+// @Param onlyNotApproved query boolean false "filtering on not approved"
 //
 // @Produce json
 //
